--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,8 @@ dependencies {
     //Abas
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
+    //imageCicleView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
