--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
     //imageCicleView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // FirebaseUI Storage
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
